2012-07-07 Borut Razem <borut.razem AT siol.net>
	* tools/cmp_gp_mp.sh:
	  detection of changed .inc files with gputils specific
	  modifications (lines starting with '@@@'),
	  detection of devices from gpprocessor.c in lkr folder,
	  detection of .lkr from lkr folder in gpprocessor.c,
	  detection of devices from gpprocessor.c in header folder,
	  added command line options

2012-07-01 Borut Razem <borut.razem AT siol.net>
	* tools/cmp_gp_mp.sh: added script to compare gputils and
	  mplabx .inc and .lkr files

2009-03-13 Borut Razem <borut.razem AT siol.net>
	* scripts/build/mingw/gputils.nsi:
	  remove DISTRIBUTION.txt and NEWS.txt when uninstalling
	* scripts/build/mingw/do_setup.sh: added

2008-05-19 Borut Razem <borut.razem AT siol.net>
	* scripts/ChangeLog: created
	* scripts/build/mingw/gputils.nsi.in: renamed to
	  scripts/build/mingw/gputils.nsi
	* scripts/build/mingw/gputils.nsi:
	  updated for gputils 0.13.6 release package
	* scripts/build/mingw/make-mingw: removed preprocessing of
	  gputils.nsi.in, command line arguments are used instead;
	  run makensis on Windows